--- a/pagina _inicial/inicio.css
+++ b/pagina _inicial/inicio.css
@@ -23,29 +23,21 @@ h2 {
   /* text-decoration: none; */
 }
 
-#div1 {
+#div1,
+#div2,
+#div3 {
   background: #00a86b;
   width: 300px;
   height: 300px;
   border: 5px solid #111;
   display: inline-block;
-  margin: 100px 0px 30px 250px;
-  cursor: pointer;
-}
-
-#div2 {
-  background: #00a86b;
-  width: 300px;
-  height: 300px;
-  border: 5px solid #111;
-  display: inline-block;
-  margin: 100px 0px 30px 100px;
+  margin: 100px 0px 0px 250px;
   cursor: pointer;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 2fr 2fr;
+  grid-template-columns: 0.5fr 0.5fr 0.5fr;
 }
 
 #div1:hover {
@@ -54,6 +46,11 @@ h2 {
 }
 
 #div2:hover {
+  transform: scale(1.2);
+  transition: 0.5s;
+}
+
+#div3:hover {
   transform: scale(1.2);
   transition: 0.5s;
 }
