--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -1,5 +1,6 @@
 #div {
-  width: 350px;
-  height: 180px;
+  margin: 10% 28% 0% 36%;
+  width: 370px;
+  height: 210px;
   border: 3px solid #000;
 }
