--- a/fichas_medicas/fichas_medicas.css
+++ b/fichas_medicas/fichas_medicas.css
@@ -18,7 +18,7 @@ a {
 .grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  gap: 3px;
+  gap: 1px;
 }
 
 .pacientes_box {
@@ -34,4 +34,6 @@ a {
 .pacientes_box:hover {
   transform: scale(1.2);
   transition: 1s;
+  opacity: 0,7;
+  background-color: #3b7a57;
 }
