--- a/pagina _inicial/inicio.css
+++ b/pagina _inicial/inicio.css
@@ -18,9 +18,9 @@ svg {
 }
 
 h2 {
-  text-align: center;
   cursor: pointer;
-  /* text-decoration: none; */
+  display: inline-block;
+  justify-content: center;
 }
 
 #div1,
@@ -30,14 +30,15 @@ h2 {
   width: 300px;
   height: 300px;
   border: 5px solid #111;
-  display: inline-block;
-  margin: 100px 0px 0px 250px;
+  display: flex;
+  margin: 30% 50% 0% 50%;
+  justify-content: space-around;
   cursor: pointer;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 0.5fr 0.5fr 0.5fr;
+  grid-template-columns: 25% 25% 25%;
 }
 
 #div1:hover {
