--- a/cadastro/cadastro.css
+++ b/cadastro/cadastro.css
@@ -1,6 +1,82 @@
-#div {
-  margin: 10% 28% 0% 36%;
-  width: 370px;
-  height: 210px;
-  border: 3px solid #000;
+body{
+  background-color: #66A182;
 }
+
+h1{
+  display: flex;
+  font-family: Arial, Helvetica, sans-serif;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+#bloco{
+  margin-top: 50px;
+  margin-left: 460px;
+  width: 400px;
+  height: 380px;
+  border: 2px solid #000;
+  background-color: #81d4fa;
+  border-radius: 0.6em;
+}
+
+input::placeholder{
+  color: #000;
+  opacity: 0.8;
+}
+
+#botaocadastro{
+  box-sizing: border-box;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  background-color: transparent;
+  border: 2px solid #66A182;
+  border-radius: 0.6em;
+  color: #66A182;
+  cursor: pointer;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+          align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin-left: 100px;
+  margin-bottom: 0px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+
+#botaocadastro:hover, #botaocadastro:focus {
+  color: #000;
+  outline: 0;
+}
+
+#botaocadastro{
+  -webkit-transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+  transition: box-shadow 300ms ease-in-out, color 300ms ease-in-out;
+}
+#botaocadastro:hover {
+  box-shadow: 0 0 40px 40px #66A182 inset;
+}
+
+input, select, option{
+  background-color: #66A182;
+  border-radius: 5px;
+  border: 1px solid #000;
+  padding: 2px;
+  width: auto;
+}
+
+textarea:focus, input:focus{
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
+
