--- a/fichas_medicas/fichas_medicas.css
+++ b/fichas_medicas/fichas_medicas.css
@@ -21,19 +21,38 @@ a {
   gap: 1px;
 }
 
-.pacientes_box {
-  text-align: center;
-  font-size: 15px;
-  background-color: #00a86b;
-  padding: 10px 10px;
-  border: 2px solid #222;
-  margin: 0px 100px 0px 100px;
-  cursor: pointer;
+#divBusca{
+  background-color:#E0EEEE;
+  border:solid 2px #5F9EA0;
+  border-radius:10px;
+  width:300px;
+  height:32px;
 }
 
-.pacientes_box:hover {
-  transform: scale(1.2);
-  transition: 1s;
-  opacity: 0,7;
-  background-color: #3b7a57;
+#txtBusca{
+  float:left;
+  background-color:transparent;
+  padding-left: 37px;
+  font-size:18px;
+  border:none;
+  height:32px;
+  width:191px;
+}
+
+#btnBusca{
+  border:none;
+  float:left;
+  height:32px;
+  border-radius:0 7px 7px 0;
+  width:70px;
+  font-weight:bold;
+  background:#5F9EA0;
+}
+
+#display{
+  width: 800px;
+  height: 400px;
+  border: 3px solid #000;
+  margin: 40px 300px 0px 260px;
+  background-color: #66A182;
 }
