--- a/questionario/questionario.css
+++ b/questionario/questionario.css
@@ -1,1 +1,29 @@
-a
+#display{
+    width: 800px;
+    height: 300px;
+    border: 3px solid #000;
+    margin: 50px 100px 0px 250px;
+    border-radius: 2%;
+}
+
+#questionbox{
+    width: 1000px;
+    height: 100px;
+    /* border: 1px solid #000; */
+    margin: 20px 100px 0px 145px;
+}
+
+.question{
+    width: 310px;
+    height: 70px;
+    /* border: 1px solid #000; */
+    display: inline-flex;
+    justify-content: center;
+    margin: 10px 0px 0px 130px;
+}
+
+button{
+    border-radius: 10px;
+    height: 60px;
+    width: 150px;
+}
