--- a/pagina _inicial/inicio.css
+++ b/pagina _inicial/inicio.css
@@ -1,26 +1,29 @@
 body {
-  background: #87ceeb;
+  background: #19b2e6;
   margin: 0;
   font-family: Arial;
 }
 
 h1 {
-  padding-left: 525px;
-  padding-right: 506px;
+  font-family: Arial;
+  padding-left: 480px;
+  padding-right: 400px;
   margin: 30px 0px 0px 30px;
   font-size: 40px;
-  display: inline-block;
-  cursor: default;
+  text-decoration: underline 1px #19b2e6;
+  text-shadow: 2px 2px 5px #5656ff;
 }
 
 svg {
-  display: inline-flex;
+  display: flex;
 }
 
 h2 {
+  font-family: Arial;
+  text-shadow: 2px 2px 5px #00452c;
   cursor: pointer;
-  display: inline-flex;
-  justify-content: row;
+  display: flex;
+  justify-content: center;
 }
 
 #div1,
@@ -30,7 +33,7 @@ h2 {
   width: 300px;
   height: 300px;
   border: 5px solid #111;
-  display: flex;
+  /* display: flex; */
   margin: 30% 50% 0% 50%;
   justify-content: space-around;
   cursor: pointer;
@@ -42,16 +45,16 @@ h2 {
 }
 
 #div1:hover {
-  transform: scale(1.2);
-  transition: 1s;
+  transform: scale(1.1);
+  transition: 0.75s;
 }
 
 #div2:hover {
-  transform: scale(1.2);
-  transition: 0.5s;
+  transform: scale(1.1);
+  transition: 1s;
 }
 
 #div3:hover {
-  transform: scale(1.2);
-  transition: 0.5s;
+  transform: scale(1.1);
+  transition: 1s;
 }
